--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "simple-presence",
 	"private": true,
+	"packageManager": "bun@1.2.17",
+	"type": "module",
 	"workspaces": [
 		"apps/*",
 		"packages/*"
@@ -21,5 +23,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.0.5"
 	},
-	"packageManager": "bun@1.2.17"
+	"overrides": {
+		"vite": "npm:rolldown-vite@latest"
+	}
 }
