--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,5 @@
 {
-	"name": "web",
-	"private": true,
+	"name": "@simple-presence/web",
 	"type": "module",
 	"scripts": {
 		"build": "vite build",
@@ -10,6 +9,7 @@
 		"serve": "bunx serve .output/public -p 3001"
 	},
 	"dependencies": {
+		"@simple-presence/core": "workspace:*",
 		"@orpc/tanstack-query": "^1.5.2",
 		"@orpc/client": "^1.5.2",
 		"@tanstack/react-form": "^1.12.3",
