--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,13 +11,13 @@
 		"db:migrate": "drizzle-kit migrate"
 	},
 	"dependencies": {
-		"dotenv": "^16.4.7",
-		"zod": "^3.25.16",
-		"@orpc/server": "^1.5.0",
+		"@simple-presence/core": "workspace:*",
 		"@orpc/client": "^1.5.0",
-		"hono": "^4.8.2",
+		"@orpc/server": "^1.5.0",
+		"better-auth": "^1.2.10",
 		"drizzle-orm": "^0.44.2",
-		"better-auth": "^1.2.10"
+		"hono": "^4.8.2",
+		"zod": "^3.25.16"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250620.0",
