--- a/package.json
+++ b/package.json
@@ -9,16 +9,9 @@
 	],
 	"scripts": {
 		"check": "biome check --write .",
-		"dev": "bun run --filter '*' dev",
 		"build": "bun run --filter '*' build",
-		"check-types": "bun run --filter '*' check-types",
-		"dev:native": "bun run --filter native dev",
-		"dev:web": "bun run --filter web dev",
-		"dev:server": "bun run --filter server dev",
-		"db:push": "bun run --filter server db:push",
-		"db:studio": "bun run --filter server db:studio",
-		"db:generate": "bun run --filter server db:generate",
-		"db:migrate": "bun run --filter server db:migrate"
+		"dev": "bun run --filter '*' dev",
+		"deploy": "bun run --filter '*' deploy"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.5"
