--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,27 +9,33 @@
 		"serve": "bunx serve .output/public -p 3001"
 	},
 	"dependencies": {
-		"@simple-presence/react": "workspace:*",
-		"@orpc/tanstack-query": "^1.5.2",
+		"@icons-pack/react-simple-icons": "^13.2.0",
 		"@orpc/client": "^1.5.2",
+		"@orpc/tanstack-query": "^1.5.2",
+		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-use-controllable-state": "^1.2.2",
+		"@shikijs/transformers": "^3.7.0",
+		"@simple-presence/react": "workspace:*",
 		"@tanstack/react-form": "^1.12.3",
 		"@tanstack/react-query": "^5.81.2",
 		"@tanstack/react-router": "^1.121.40",
 		"@tanstack/react-router-with-query": "^1.121.40",
-		"@tanstack/router-plugin": "^1.121.40",
 		"@tanstack/react-start": "^1.121.40",
+		"@tanstack/router-plugin": "^1.121.40",
+		"better-auth": "^1.2.10",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.473.0",
+		"lucide-react": "^0.525.0",
 		"next-themes": "^0.4.6",
 		"radix-ui": "^1.4.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"shiki": "^3.7.0",
 		"sonner": "^2.0.5",
-		"tailwindcss": "^4.1.11",
 		"tailwind-merge": "^2.6.0",
-		"zod": "^3.25.67",
-		"better-auth": "^1.2.10"
+		"tailwindcss": "^4.1.11",
+		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.1.11",
