--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,10 @@
 		"serve": "bunx serve .output/public -p 3001"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.1.1",
 		"@icons-pack/react-simple-icons": "^13.2.0",
 		"@orpc/client": "^1.5.2",
 		"@orpc/tanstack-query": "^1.5.2",
-		"@radix-ui/react-select": "^2.2.5",
-		"@radix-ui/react-slot": "^1.2.3",
-		"@radix-ui/react-use-controllable-state": "^1.2.2",
 		"@shikijs/transformers": "^3.7.0",
 		"@simple-presence/react": "workspace:*",
 		"@tanstack/react-form": "^1.12.3",
@@ -26,15 +24,24 @@
 		"better-auth": "^1.2.10",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"date-fns": "^4.1.0",
+		"embla-carousel-react": "^8.6.0",
+		"input-otp": "^1.4.2",
 		"lucide-react": "^0.525.0",
 		"next-themes": "^0.4.6",
 		"radix-ui": "^1.4.2",
 		"react": "^19.1.0",
+		"react-day-picker": "^9.7.0",
 		"react-dom": "^19.1.0",
+		"react-hook-form": "^7.59.0",
+		"react-resizable-panels": "^3.0.3",
+		"recharts": "^3.0.2",
 		"shiki": "^3.7.0",
 		"sonner": "^2.0.5",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss": "^4.1.11",
+		"vaul": "^1.1.2",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
