--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"packages/*"
 	],
 	"scripts": {
-		"check": "biome check --write .",
+		"check": "biome check --write --unsafe .",
 		"build": "bun run --filter '*' build",
 		"dev": "bun run --filter '*' dev",
 		"deploy": "bun run --filter '*' deploy"
