--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,13 @@
 		"@icons-pack/react-simple-icons": "^13.2.0",
 		"@orpc/client": "^1.5.2",
 		"@orpc/tanstack-query": "^1.5.2",
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-collapsible": "^1.1.11",
+		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.7",
 		"@shikijs/transformers": "^3.7.0",
 		"@simple-presence/react": "workspace:*",
 		"@tanstack/react-form": "^1.12.3",
@@ -51,7 +58,7 @@
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react": "^4.6.0",
-		"alchemy": "^0.41.0",
+		"alchemy": "^0.43.0",
 		"serve": "^14.2.4",
 		"typescript": "^5.8.3",
 		"tw-animate-css": "^1.3.4",
