--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,12 +57,12 @@
 		"@tanstack/react-router-devtools": "^1.129.8",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
-		"@vitejs/plugin-react": "^4.7.0",
+		"@vitejs/plugin-react-oxc": "^0.3.0",
 		"alchemy": "^0.43.5",
 		"serve": "^14.2.4",
-		"typescript": "^5.8.3",
 		"tw-animate-css": "^1.3.5",
-		"vite-tsconfig-paths": "^5.1.4",
-		"vite": "^7.0.10"
+		"typescript": "^5.8.3",
+		"vite": "^7.0.10",
+		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
