finish websocket refac

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,5 +18,8 @@
 	"devDependencies": {
 		"tsdown": "^0.12.9",
 		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"@orpc/client": "^1.7.4"
 	}
 }
