--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -29,5 +29,10 @@
 
 		/* If your code runs in the DOM: */
 		"lib": ["es2022", "dom", "dom.iterable"]
-	}
+	},
+	"references": [
+		{
+			"path": "../../apps/server/tsconfig.json"
+		}
+	]
 }
