--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,6 +63,7 @@
 		"tw-animate-css": "^1.3.5",
 		"typescript": "^5.8.3",
 		"vite": "^7.0.10",
+		"vite-bundle-analyzer": "^1.1.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
