--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
 		"input-otp": "^1.4.2",
 		"lucide-react": "^0.525.0",
 		"next-themes": "^0.4.6",
+		"partysocket": "^1.1.4",
 		"radix-ui": "^1.4.2",
 		"react": "^19.1.0",
 		"react-day-picker": "^9.8.0",
