--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,7 +20,7 @@
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.7",
-		"@shikijs/transformers": "^3.8.1",
+		"@radix-ui/react-use-controllable-state": "^1.2.2",
 		"@simple-presence/react": "workspace:*",
 		"@tanstack/react-form": "^1.14.2",
 		"@tanstack/react-query": "^5.83.0",
@@ -35,7 +35,7 @@
 		"date-fns": "^4.1.0",
 		"embla-carousel-react": "^8.6.0",
 		"input-otp": "^1.4.2",
-		"lucide-react": "^0.525.0",
+		"lucide-react": "^0.537.0",
 		"next-themes": "^0.4.6",
 		"partysocket": "^1.1.4",
 		"radix-ui": "^1.4.2",
@@ -47,23 +47,24 @@
 		"recharts": "^3.1.0",
 		"shiki": "^3.8.1",
 		"sonner": "^2.0.6",
-		"tailwind-merge": "^2.6.0",
+		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11",
 		"vaul": "^1.1.2",
-		"zod": "^3.25.76"
+		"zod": "^4.0.7"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20250807.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@tanstack/react-query-devtools": "^5.83.0",
 		"@tanstack/react-router-devtools": "^1.129.8",
-		"@types/react": "^19.1.8",
+		"@types/react": "^19.1.9",
 		"@types/react-dom": "^19.1.6",
-		"@vitejs/plugin-react-oxc": "^0.3.0",
-		"alchemy": "^0.43.5",
+		"@vitejs/plugin-react": "^5.0.0",
+		"alchemy": "^0.58.0",
 		"serve": "^14.2.4",
 		"tw-animate-css": "^1.3.5",
 		"typescript": "^5.8.3",
-		"vite": "^7.0.10",
+		"vite": "7.0.4",
 		"vite-bundle-analyzer": "^1.1.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
